--- a/apps/hotdrop-be/package.json
+++ b/apps/hotdrop-be/package.json
@@ -12,7 +12,8 @@
     "@repo/db": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/bcryptjs": "^3.0.0",
-    "@types/express": "^5.0.3"
+    "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +30,7 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "typescript": "^5.8.3"
   }
 }
