--- a/apps/hotdrop-fe/package.json
+++ b/apps/hotdrop-fe/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@repo/ui": "workspace:*",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.0",
     "next": "^15.3.0",
     "next-auth": "^4.24.11",
     "react": "^19.1.0",
