--- a/apps/hotdrop-be/package.json
+++ b/apps/hotdrop-be/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@repo/db": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/aws-sdk": "^2.7.4",
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0"
@@ -20,11 +21,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.842.0",
     "@repo/db": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^8.2.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
