--- a/apps/hotdrop-be/package.json
+++ b/apps/hotdrop-be/package.json
@@ -19,7 +19,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.842.0",
     "@repo/db": "workspace:*",
