--- a/apps/hotdrop-be/tsconfig.json
+++ b/apps/hotdrop-be/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../packages/typescript-config/base.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "module": "NodeNext"
   }
 }
