--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,3 +1,9 @@
 {
     "extends": "../typescript-config/base.json",
+    "compilerOptions": {
+        "rootDir": "./src",
+        "outDir": "./dist",
+        "module": "NodeNext"
+    },
+    "include": ["src/**/*"]
 }
