--- a/apps/hotdrop-be/package.json
+++ b/apps/hotdrop-be/package.json
@@ -34,6 +34,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
+    "razorpay": "^2.9.6",
     "typescript": "^5.8.3"
   }
 }
