--- a/apps/hotdrop-fe/package.json
+++ b/apps/hotdrop-fe/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.23.0",
     "next": "^15.3.0",
     "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
     "next-sitemap": "^4.2.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
