checkout for allitems and theme

--- a/apps/hotdrop-fe/public/manifest.json
+++ b/apps/hotdrop-fe/public/manifest.json
@@ -1,10 +1,12 @@
 {
   "name": "HotDrop",
   "short_name": "HotDrop",
+  "id": "/",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#ff6600",
+  "theme_color": "#111827",
   "description": "Order management for HotDrop partners and users.",
   "icons": [
     {
@@ -17,5 +19,6 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "prefer_related_applications": false
 }
