--- a/apps/hotdrop-be/package.json
+++ b/apps/hotdrop-be/package.json
@@ -29,6 +29,8 @@
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^8.2.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/node-cron": "^3.0.11",
+    "@types/node-fetch": "^2.6.13",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -36,6 +38,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
+    "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
     "razorpay": "^2.9.6",
     "typescript": "^5.8.3"
   }
