--- a/apps/hotdrop-fe/public/manifest.json
+++ b/apps/hotdrop-fe/public/manifest.json
@@ -10,16 +10,14 @@
   "description": "Order management for HotDrop partners and users.",
   "icons": [
     {
-      "src": "/logo.png",
+      "src": "/logo192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
-      "src": "/logo.png",
+      "src": "/logo512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ],
   "prefer_related_applications": false
